force-app/main/default/objects/Anticipo__c/Anticipo__c.object-meta.xml
<CustomObject>
    <label>Anticipo</label>
    <nameField>
        <displayFormat>ANT-{00000}</displayFormat>
        <label>Anticipo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anticipos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>