force-app/main/default/objects/Anticipo__c/fields/Comentarios_Aprobacion_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Aprobacion_Rechazo__c</fullName>
    <label>Comentarios aprobación/rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>