force-app/main/default/objects/Anticipo__c/fields/Comentarios_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Asesor__c</fullName>
    <label>Comentarios asesor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>