force-app/main/default/objects/Anticipo__c/fields/Depositante__c.field-meta.xml
<CustomField>
    <fullName>Depositante__c</fullName>
    <label>Depositante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>