force-app/main/default/objects/Anticipo__c/fields/Estado_Aprobacion_Producto__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aprobacion_Producto__c</fullName>
    <label>Estado de aprobación producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>