force-app/main/default/objects/Anticipo__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>Aplicado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>En validación de Tesorería</fullName>
            </value>
            <value>
                <fullName>Corrección requerida por Tesorería</fullName>
            </value>
            <value>
                <fullName>Rechazada por Tesorería</fullName>
            </value>
            <value>
                <fullName>Confirmada por Tesorería</fullName>
            </value>
            <value>
                <fullName>Anticipo en creación</fullName>
            </value>
            <value>
                <fullName>Anticipo creado</fullName>
            </value>
            <value>
                <fullName>PDF de anticipo pendiente</fullName>
            </value>
            <value>
                <fullName>Pendiente reserva de vehículo</fullName>
            </value>
            <value>
                <fullName>Vehículo reservado</fullName>
            </value>
            <value>
                <fullName>Reserva rechazada</fullName>
            </value>
            <value>
                <fullName>Error de integración</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>