force-app/main/default/objects/Anticipo__c/fields/Fecha_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso__c</fullName>
    <label>Fecha de ingreso</label>
    <type>Date</type>
</CustomField>