force-app/main/default/objects/Anticipo__c/fields/Flag_Anticipo_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Flag_Anticipo_Asociado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica que el anticipo ha sido enviado a Softland</inlineHelpText>
    <label>Flag Anticipo Asociado</label>
    <type>Checkbox</type>
</CustomField>