force-app/main/default/objects/Anticipo__c/fields/Identificacion_Depositante__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_Depositante__c</fullName>
    <label>Identificación depositante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>