force-app/main/default/objects/Anticipo__c/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <label>Identificador</label>
    <length>16</length>
    <type>Text</type>
</CustomField>