force-app/main/default/objects/Anticipo__c/fields/Identificador_Helios__c.field-meta.xml
<CustomField>
    <fullName>Identificador_Helios__c</fullName>
    <label>Identificador Helios</label>
    <length>100</length>
    <type>Text</type>
</CustomField>