force-app/main/default/objects/Anticipo__c/fields/Medio_Pago__c.field-meta.xml
<CustomField>
    <fullName>Medio_Pago__c</fullName>
    <label>Medio de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Caja</fullName>
            </value>
            <value>
                <fullName>SINPE</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>