force-app/main/default/objects/Anticipo__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Anticipos</relationshipLabel>
    <relationshipName>Anticipos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>