force-app/main/default/objects/Anticipo__c/fields/PDF_Anticipo_Softland__c.field-meta.xml
<CustomField>
    <fullName>PDF_Anticipo_Softland__c</fullName>
    <label>PDF anticipo Softland</label>
    <type>Url</type>
</CustomField>