force-app/main/default/objects/Anticipo__c/fields/Referencia_Comprobante__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Comprobante__c</fullName>
    <label>Referencia / comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>