force-app/main/default/objects/Anticipo__c/fields/Tipo_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Ingreso__c</fullName>
    <label>Tipo de ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserva de vehículo</fullName>
            </value>
            <value>
                <fullName>Abono</fullName>
            </value>
            <value>
                <fullName>Complemento de prima</fullName>
            </value>
            <value>
                <fullName>Separación pedido especial</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>