force-app/main/default/objects/Anticipo__c/validationRules/Estatus_No_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Estatus_No_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;
	ISCHANGED(Estatus__c) &amp;&amp; 
	ISPICKVAL(PRIORVALUE(Estatus__c), &apos;Cancelado&apos;) &amp;&amp; 
	!ISPICKVAL(Estatus__c, &apos;Cancelado&apos;)</errorConditionFormula>
    <errorDisplayField>Estatus__c</errorDisplayField>
    <errorMessage>El estatus del anticipo no puede ser actualizado manualmente, por favor siga el flujo del proceso de agregar anticipo desde la oportunidad, o en su lugar cancele el anticipo actual y genere otro.</errorMessage>
</ValidationRule>