force-app/main/default/objects/Anticipo__c/validationRules/Fields_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Not_Editable</fullName>
    <active>true</active>
    <description>Valida que los campos de oportunidad, producto y monto no puedan ser editados manualmente.</description>
    <errorConditionFormula>!ISNEW() &amp;&amp;
	(
 	ISCHANGED(Oportunidad__c) ||
  ISCHANGED(Producto__c) ||
  ISCHANGED(Monto__c) || 
  ISCHANGED(Identificador__c)
	)</errorConditionFormula>
    <errorMessage>Los campos de oportunidad, vehiculo, identificador de pago y monto no pueden ser modificados manual mente, cancele el anticipo y agregue uno nuevo si lo requiere.</errorMessage>
</ValidationRule>