force-app/main/default/objects/Anticipo__c/validationRules/Oportunidad_No_Syncronizada.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidad_No_Syncronizada</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
 (
					ISNULL(Oportunidad__r.Synced_Quote__c)
	)</errorConditionFormula>
    <errorDisplayField>Oportunidad__c</errorDisplayField>
    <errorMessage>La oportunidad requiere tener un presupuesto principal syncronizado.</errorMessage>
</ValidationRule>