force-app/main/default/objects/Anticipo__c/validationRules/Producto_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Producto_Requerido</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
ISNULL(Producto__c)</errorConditionFormula>
    <errorDisplayField>Producto__c</errorDisplayField>
    <errorMessage>El vehiculo es requerido.</errorMessage>
</ValidationRule>