force-app/main/default/objects/Anticipo__c/validationRules/Producto_Reservado.validationRule-meta.xml
<ValidationRule>
    <fullName>Producto_Reservado</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
NOT(ISNULL(Producto__c)) &amp;&amp;
Producto__r.Producto_Reservado__c = true</errorConditionFormula>
    <errorDisplayField>Producto__c</errorDisplayField>
    <errorMessage>El producto ingresado ya se encuentra reservado.</errorMessage>
</ValidationRule>