force-app/main/default/objects/Anticipo__c/validationRules/RM_ValidaMontoMinimoMotosUsados.validationRule-meta.xml
<ValidationRule>
    <fullName>RM_ValidaMontoMinimoMotosUsados</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Oportunidad__r.RecordType.DeveloperName = &apos;Autos_Usados&apos;,TRUE,FALSE) &amp;&amp;
!ISNULL(Monto__c) &amp;&amp; 
 Monto__c &lt; 200</errorConditionFormula>
    <errorDisplayField>Monto__c</errorDisplayField>
    <errorMessage>Para las oportunidades de motos usados el monto minimo por anticipo es de 200</errorMessage>
</ValidationRule>