force-app/main/default/objects/Anticipo__c/validationRules/Status_Update_Applied_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Update_Applied_Not_Allowed</fullName>
    <active>false</active>
    <errorConditionFormula>! ISNEW() &amp;&amp;
	ISCHANGED(Estatus__c) &amp;&amp; 
	ISPICKVAL(Estatus__c, &apos;Aplicado&apos;)</errorConditionFormula>
    <errorDisplayField>Estatus__c</errorDisplayField>
    <errorMessage>El estatus del anticipo no puede ser actualizado manualmente, por favor siga el flujo del proceso de agregar anticipo desde la oportunidad, o en su lugar cancele el anticipo actual y genere otro.</errorMessage>
</ValidationRule>