force-app/main/default/objects/Anticipo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Monto__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Identificador__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>